Update puppet.sh